[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rktellolib"
version = '1.0.4'
authors = [
  {name="Ramsin Khoshabeh", email="ramsin@ucsd.edu"},
]
description = "A simple library to interface with the DJI Tello drone"
readme = "README.md"
requires-python = ">=3.5"
license = {file = "License.txt"}
keywords = ['dji', 'tello', 'ryze', 'drone', 'sdk', 'official sdk']
dependencies = [
  "opencv-python",
  "numpy"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/ramujin/rktellolib"
"Bug Tracker" = "https://github.com/ramujin/rktellolib/issues"
